fixed: decor mixin z-index

--- a/src/scss/blocks/_top_sales.scss
+++ b/src/scss/blocks/_top_sales.scss
@@ -65,7 +65,7 @@
 		}
 
 		&::after {
-			@include square_dots_aft(7.1rem, 7.1rem, -3.1rem, -3.1rem);
+			@include square_dots_aft(7.1rem, 7.1rem, -1.6rem, -3.1rem);
 		}
 	}
 }
@@ -93,6 +93,7 @@
 	text-align: center;
 	position: relative;
 	transition: all $transition_dur ease-in-out;
+	z-index: 1;
 
 	&:hover {
 		box-shadow: 0 0.4rem 2rem 0 rgba(0, 0, 0, 0.25);
